# Romulus

./: .clang-format  .clang-tidy  .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  implementation_plan.md  task.md  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/instructions/: cmake.instructions.md  cpp.instructions.md
.github/workflows/: ci.yml  copilot-setup-steps.yml  release.yml
apps/: CMakeLists.txt
apps/api/: README.md
apps/cli/: CMakeLists.txt  main.cpp
apps/gui/: CMakeLists.txt  file_dialog.cpp  file_dialog.hpp  gui_app.cpp  gui_app.hpp  gui_app_shared.hpp  gui_app_tab_dats.cpp  gui_app_tab_db.cpp  gui_app_tab_folders.cpp  gui_app_tab_log.cpp  gui_log_sink.hpp  gui_logic.hpp  main.cpp
build-ci/: CMakeCache.txt
build_ci/: CMakeCache.txt
cmake/: CompilerWarnings.cmake  StaticAnalysis.cmake
lib/: CMakeLists.txt
lib/romulus/: CMakeLists.txt
lib/romulus/core/: error.hpp  logging.cpp  logging.hpp  types.hpp
lib/romulus/dat/: dat_fetcher.cpp  dat_fetcher.hpp  dat_parser.cpp  dat_parser.hpp
lib/romulus/database/: database.cpp  database.hpp
lib/romulus/engine/: classifier.cpp  classifier.hpp  matcher.cpp  matcher.hpp
lib/romulus/report/: report_generator.cpp  report_generator.hpp
lib/romulus/scanner/: archive_service.cpp  archive_service.hpp  hash_service.cpp  hash_service.hpp  rom_scanner.cpp  rom_scanner.hpp
lib/romulus/service/: romulus_service.cpp  romulus_service.hpp
src/: CMakeLists.txt  main.cpp
src/classifier/: CMakeLists.txt  classifier.cpp
src/classifier/include/romulus/classifier/: classifier.hpp
src/common/: CMakeLists.txt
src/common/include/romulus/: common.hpp
src/dat_fetcher/: CMakeLists.txt  dat_fetcher.cpp
src/dat_fetcher/include/romulus/dat_fetcher/: dat_fetcher.hpp
src/dat_parser/: CMakeLists.txt  dat_parser.cpp
src/dat_parser/include/romulus/dat_parser/: dat_parser.hpp
src/database/: CMakeLists.txt  database.cpp
src/database/include/romulus/database/: database.hpp
src/hash_service/: CMakeLists.txt  hash_service.cpp
src/hash_service/include/romulus/hash_service/: hash_service.hpp
src/matcher/: CMakeLists.txt  matcher.cpp
src/matcher/include/romulus/matcher/: matcher.hpp
src/report_generator/: CMakeLists.txt  report_generator.cpp
src/report_generator/include/romulus/report_generator/: report_generator.hpp
src/rom_scanner/: CMakeLists.txt  rom_scanner.cpp
src/rom_scanner/include/romulus/rom_scanner/: rom_scanner.hpp
tests/: CMakeLists.txt  test_classifier.cpp  test_dat_parser.cpp  test_database.cpp  test_hash_service.cpp  test_matcher.cpp  test_report_generator.cpp
tests/fixtures/dats/: README.md
tests/integration/: test_dat_update.cpp  test_full_scan.cpp
tests/unit/: test_archive_service.cpp  test_classifier.cpp  test_dat_parser.cpp  test_database.cpp  test_gui_logic.cpp  test_hash_service.cpp  test_matcher.cpp  test_report_generator.cpp  test_romulus_service.cpp
web/: README.md
